--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-lovers",
+  "name": "sugartype",
   "version": "1.0.0",
   "main": "src/index.html",
   "license": "MIT",
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "babel-jest": "^24.9.0",
     "eslint": "^5.9.0",
+    "firebase": "^7.2.3",
     "gh-pages": "^2.1.1",
     "htmlhint": "^0.11.0",
     "jest": "^24.9.0",
